# toulbar2

./: .buildinfo  .clang-format  .cproject  .editorconfig  .gitignore  .lgtm.yml  .project  .swp  .travis.yml  4wqueens.wcsp  Build_package.sh  CMakeCache.txt  CMakeLists.txt  Debian-upload.howto  Doxyfile.in  HowTo.build.Toulbar2  HowTo.build.Toulbar2.vns  HowTo.use.toulbar2_with_eclipse  LICENSE  README.md  Wheels-Building.readme  appveyor.yml  benchmarks.html  changelog.md  clean  conanfile.txt  dev-requirements.txt  downloads.html  eps.sh  example.wcsp  gdb_run  genindex.html  geno_kad_CMakeList.txt  geno_kad_toulbar2_module.tcl  git_tb2.sh  index.html  index_pdf.html  kad_maj_git.sh  kadgit.sh  make-debian.sh  (+22 more)
toulbar2/: .gitignore  CMakeCache.txt  CMakeLists.txt  Copyright.txt  Doxyfile.in  HowTo.build.Toulbar2  LICENSE  Makefile  README.md  ReadMe.txt  ToulbarVersion.hpp.in  clean  iloglue.cpp  make-debian.sh  peo  runall.sh  rungenerate.sh  runtd.sh  tb2abstractconstr.cpp  tb2abstractconstr.hpp  tb2arithmetic.cpp  tb2arithmetic.hpp  tb2bep.cpp  tb2binconstr.cpp  tb2binconstr.hpp  tb2boostgraph.cpp  tb2btd.cpp  tb2btlist.hpp  tb2clusters.cpp  tb2clusters.hpp  tb2constraint.cpp  tb2constraint.hpp  tb2costvar.cpp  tb2costvar.hpp  tb2domain.cpp  tb2domain.hpp  tb2enumvar.cpp  tb2enumvar.hpp  tb2intervar.cpp  tb2intervar.hpp  (+34 more)
toulbar2/cmake-script/: Boost_option.cmake  FindGmp.cmake  FindQuadMath.cmake  ManageString.cmake  UseDoxygen.cmake  cover-test.cmake  define_option.cmake  genVersionFile.sh  iloglue.cmake  init-version.cmake  mingw32-config.cmake  package.cmake  source_files.cmake  test.cmake  test_bench.cmake  toulbar2test.cmake
toulbar2/cover/: cover-option.cmake  test-opt.cmake
toulbar2/debian/: changelog  control  copyright  rules
toulbar2/debian/patches/: 010-inhibit-version-generation
toulbar2/doc/: CpWcspFormats.html  CpWcspFormats.txt  DecomposableGlobalCostFunctions.html  MendelSoft.txt  MendelSolft.txt  QpboFormat.txt  ToulBar2.sh  ToulBar2.tex  ToulBar2.txt  publications.bib  toulbar2.1  toulbar2.ssd  userdoc.tex  wcspformat.html  wcspformat.txt
toulbar2/man/: toulbar2.1
toulbar2/misc/script/: Makefile  MatchRegexp.txt  bounds.awk  bounds.sh  cp2wcsp.awk  cp2wcsp_win.awk  evalresults.awk  exp_opt.pl  make_report.pl  run_test.pl  runall.awk  runall.sh  rungenerate.sh  rungenerateBTD.sh  rungeneratealldiff.sh  rungenerateglobal.sh  rungenerateregular.sh  rungeneratevalgrind.sh  solution2cp.awk  tb2trace.sh  td.sh
toulbar2/src/: .clang-format  SimpleGlob.h  SimpleOpt.h  tb2abstractconstr.cpp  tb2abstractconstr.hpp  tb2alldiffconstr.cpp  tb2alldiffconstr.hpp  tb2amongconstr.cpp  tb2amongconstr.hpp  tb2arithmetic.cpp  tb2arithmetic.hpp  tb2automaton.cpp  tb2automaton.hpp  tb2basejobs.cpp  tb2basejobs.hpp  tb2bep.cpp  tb2bep.hpp  tb2binconstr.cpp  tb2binconstr.hpp  tb2boostgraph.cpp  tb2btd.cpp  tb2btlist.hpp  tb2btqueue.cpp  tb2btqueue.hpp  tb2clause.hpp  tb2clusters.cpp  tb2clusters.hpp  tb2constraint.cpp  tb2constraint.hpp  tb2cpd.cpp  tb2cpd.hpp  tb2domain.cpp  tb2domain.hpp  tb2dpglobalconstr.cpp  tb2dpglobalconstr.hpp  tb2enumvar.cpp  tb2enumvar.hpp  tb2evidence.cpp  tb2flowbasedconstr.cpp  tb2flowbasedconstr.hpp  (+88 more)
toulbar2/src/applis/: tb2bep.hpp  tb2haplotype.cpp  tb2haplotype.hpp
toulbar2/src/core/: tb2abstractconstr.cpp  tb2abstractconstr.hpp  tb2arithmetic.hpp  tb2binconstr.hpp  tb2constraint.cpp  tb2constraint.hpp  tb2domain.cpp  tb2domain.hpp  tb2enumvar.cpp  tb2enumvar.hpp  tb2globaldecomposable.hpp  tb2naryconstr.cpp  tb2ternaryconstr.hpp  tb2vacutils.cpp  tb2vacutils.hpp  tb2variable.cpp  tb2variable.hpp  tb2wcsp.cpp  tb2wcsp.hpp
toulbar2/src/globals/: tb2alldiffconstr.cpp  tb2alldiffconstr.hpp  tb2dpglobalconstr.hpp  tb2flowbasedconstr.cpp  tb2flowbasedconstr.hpp  tb2globalcardinalityconstr.cpp  tb2globalcardinalityconstr.hpp  tb2globalconstr.cpp  tb2globalconstr.hpp  tb2grammarconstr.hpp  tb2grammarutils.cpp  tb2grammarutils.hpp  tb2graph.hpp  tb2linearconstr.cpp  tb2lpsconstr.cpp  tb2maxconstr.cpp  tb2maxconstr.hpp  tb2mipsolver.hpp  tb2regulardpconstr.cpp  tb2regularflowconstr.cpp  tb2regularflowconstr.hpp  tb2sameconstr.hpp  tb2treeconstr.cpp
toulbar2/src/ilog/: iloglue.cpp
toulbar2/src/incop/: autotuning2.cc  autotuning2.cpp  autotuning2.h  csproblem.cc  csproblem.cpp  csproblem.h  incop.h  incopalgo.cc  incopalgo.cpp  incopalgo.h  incoputil.cc  incoputil.cpp  incoputil.h  makefile  narycspmain.cc  narycspmain.h  narycsproblem.cc  narycsproblem.cpp  narycsproblem.h  timer.cpp  timer.h
toulbar2/src/search/: tb2btd.cpp  tb2clusters.hpp  tb2solver.cpp  tb2solver.hpp
toulbar2/src/utils/: tb2automaton.hpp  tb2boostgraph.cpp  tb2btqueue.hpp  tb2integer.hpp  tb2queue.cpp  tb2queue.hpp  tb2randomgen.cpp  tb2randomgen.hpp  tb2reader.cpp  tb2store.hpp  tb2system.cpp  tb2utils.hpp
toulbar2/src/vns/: tb2localsearch.cpp  tb2rpdgvns.cpp
toulbar2/src/xmlcsp/: AST.hh  CSPParserCallback.hh  C_AST.h  CostRepresentation.hh  ExpressionParser.hh  XMLParser.hh  XMLParser_constants.h  XMLParser_libxml2.hh  xmlcsp.h
toulbar2/validation/: test-opt.cmake
toulbar2/validation/counting/: grid10x10.f10.uai  test_Z.uai  test_Z2.uai
toulbar2/validation/decomposable/: B1-LU04-test.wcsp  test-opt.cmake  walldiff.cfn  walldiff_simple.wcsp  wamong_hard.wcsp  wamong_linc.cfn  wamong_quad.wcsp  wgcc.cfn  wgcc.ub  wgcc_simple.wcsp  woverlap.wcsp  woverlapc.cfn  wsame_simple.wcsp  wsum_hard.wcsp  wsum_quadc.cfn  wvarmaong.wcsp
toulbar2/validation/default/: 4queens-bis.cp  4queens-bis.wcsp  4queens-salldiff.wcsp  4queens.wcsp  8wqueens_wcsp.xml  golomb4-salldiff.cp  golomb4.cp  golomb4.wcsp  haplo_1500mrk.map  haplo_4indiv_1500mrk.pre  haplotype.qpbo  latin.wcsp  magic3.wcsp  magic4-dec.cp  magic4.wcsp  max.cfn  oconnell.wcsp  oconnell_bayesnet.cp  oconnell_bayesnet.wcsp  salldiff1.cfn  samong.cfn  samongdp.cfn  sgcc1.cfn  smaxdp.cfn  (+5 more)
toulbar2/web/: documentation.html  index.html  publication.html  style.css
toulbar2/xmlcsp/: AST.hh  CSPParserCallback.hh  CostRepresentation.hh  ExpressionParser.hh  XMLParser.hh  XMLParser_libxml2.hh  xmlcsp.h
(+1280 files in other folders)
